--- a/assets/app/header.component.html
+++ b/assets/app/header.component.html
@@ -1,9 +1,8 @@
 <header class="row">
     <nav class="col-md-8 col-md-offset-2">
         <ul class="nav nav-tabs">
-            <li routerLinkActive="active"><a [routerLink]="['/mensagens']">Mensagens</a></li>
+            <li routerLinkActive="active"><a [routerLink]="['/manga']">Manga</a></li>
             <li routerLinkActive="active"><a [routerLink]="['/autenticacao']">Autenticação</a></li>
-            <li routerLinkActive="active"><a [routerLink]="['/perfil']">Perfil</a></li>
         </ul>
     </nav>
 </header>
