--- a/assets/app/manga/create-component.css
+++ b/assets/app/manga/create-component.css
@@ -6,16 +6,37 @@ h1 {
     text-align: center;
 }
 
-form {
+.limited-size {
+    width: 100%;
+    max-height: 300px;
+    object-fit: contain;
+    justify-content: center;
+}
+
+.book-form {
     display: flex;
     flex-direction: column;
     max-width: 600px;
     margin: 0 auto;
 }
 
+.book-form2 {
+    display: flex;
+    flex-direction: column;
+}
+
 label {
     margin-top: 10px;
     font-weight: bold;
+}
+
+select {
+        padding: 10px;
+        border: none;
+        border-radius: 5px;
+        background-color: #f5f5f5;
+        margin-bottom: 20px;
+        box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
 }
 
 input[type="text"],
